<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">早知道</string>
    <string name="action_settings">Settings</string>
    <string name="myQuestion">我的提问</string>
    <string name="myAnswer">我的回答</string>
    <string name="myExperience">我的经验</string>
    <string name="coins">金币</string>
    <string name="username_tv">多多</string>
    <string name="proportion">比例</string>
    <string name="wanToAns">我来回答</string>
    <string name="QuesAt">提出问题:</string>
    <string name="QuesText">提问加载中,请稍候....</string>
    <string name="QuesDate">2015-01-01 00:00</string>
    <string name="recomm">推荐用户</string>
    <string name="cerif_code">生成邀请码</string>
    <string name="edit_userInfo">编辑资料信息</string>
    <string name="edit_user">编辑资料</string>
    <string name="revise_pwd">修改密码</string>
    <string name="qq">Q  Q</string>
    <string name="address">地址</string>
    <string name="verification">生成验证码</string>
    <string name="sent_verif">通过信息短信发送验证码</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="save">保存</string>
    <string name="nickName">昵 称</string>
    <string name="sex">性别</string>
    <string name="hometown">故乡</string>
    <string name="age">年龄</string>
    <string name="signature">个性签名</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>
    <string name="about_text">1.本软件为方便大家生活而设计，请健康使用，违者将被封号。 \n\n 2.提问、回答、分享经验和推荐用户都可得到金币。 \n\n 3.软件有营利的时候，广大用户可得到80%的净利润，分配方式按用户的金币百分比分配。
</string>
    <string name="clear_cache">清除缓存</string>
    <string name="logout">注销登录</string>
    <string name="old_pwd">原密码</string>
    <string name="new_pwd">新密码</string>
    <string name="confirm_pwd">确认密码</string>
    <string name="save_pwd">更改</string>
    <string name="local">惠州</string>
    <string name="answer">我来回答</string>
    <string name="experi">我找经验</string>
    <string name="interro">我要提问</string>
    <string name="search_result">搜索结果</string>
    <string name="login">登录</string>
    <string name="forget"><u>忘记密码</u></string>
    <string name="regist"><u>注册</u></string>
    <string name="regist_bt">注册</string>
    <string name="login_password">密码</string>
    <string name="login_username">用户名</string>
    <string name="regist_check">确认密码</string>
    <string name="regist_involvecode">邀请码</string>
    <string name="regist_tx_yanzhengques">验证问题</string>
    <string name="regist_et_yanzhengques">请输入你的验证问题</string>
    <string name="regist_tx_answer">答 案</string>
    <string name="regist_et_answer">输入验证问题的答案</string>
    <string name="forget_findpw">找回密码</string>
    <string name="forget_submit">确定</string>
    <string name="forget_protectques">密保问题</string>
    <string name="forget_ques_answer">密保答案</string>
    <string name="forget_anser_et">请输入密保问题的答案</string>
    <string name="forget_finish">完成</string>
    <string name="message_tile">消息列表</string>
    <string name="comment_you">评论了你</string>
    <string name="reply_you">回复了你</string>
    <string name="comment">评论</string>
    <string name="reply">回复</string>
    <string name="concel">取消</string>
    <string name="send">发送</string>
    <string name="please_input_replay">请输入您的回复！</string>
    <string name="questioning">我来提问</string>
    <string name="share_ex">分享经验</string>
    <string name="writeDownYourComment">填写你的评论</string>
    <string name="writeDownYourShare">输入分享内容</string>
    <string name="reply_content">被回复的内容</string>
    <string name="comm">评论内容</string>
    <string name="unkown_failure">出现未知错误！</string>
    <string name="success_update">修改成功！</string>
    <string name="camera">相机</string>
    <string name="local_picture">本地图片</string>
    <string name="please_wait_upload">请等待上传！</string>
    <string name="success_upload">上传文件成功</string>
    <string name="failed_upload">上传文件失败</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="wrong_original_pwd">密码错误</string>
    <string name="two_pwd_not_match">两次输入的密码不匹配</string>
    <string name="update_password_success">修改密码成功！</string>
    <string name="pwd_can_not_be_null">密码不能为空！</string>
    <string name="forget_tx1">密码长度不能小于6位</string>
    <string name="forget_tx2">两次密码不一致，请重新输入</string>
    <string name="forget_tx3">回答错误</string>
    <string name="forget_tx4">不存在该用户</string>
    <string name="login_tx1">请输入用户名及密码</string>
    <string name="login_tx2">您好，</string>
    <string name="login_tx3">用户名或密码错误</string>
    <string name="net_error">网络不给力</string>
    <string name="auto_login">欢迎回来，</string>
    <string name="are_you_sure_to_clear_cache">你确定要清除缓存吗？</string>
    <string name="clear_success">成功清除缓存！</string>
    <string name="bestAnsed">你已经将他选为最佳回答了</string>
    <string name="bestAns">成功选为最佳答案</string>
    <string name="serviceBusy">服务器正忙，请稍后再试</string>
    <string name="isNewQuest">没有新的提问</string>
    <string name="isNewAns">没有新的回答</string>
    <string name="chcheTips">温馨提示</string>
    <string name="dataIsEmpty">没有新的数据</string>
    <string name="currentuser_logout">要注销当前账号吗？</string>
    <string name="loginOrNot">还没有登陆，要登陆吗？</string>
    <string name="searchIsEmpty">搜索内容不能为空</string>
    <string name="theImgNumberLimit">最多选%s张照片哟</string>
    <string name="network_erro">网络不通畅</string>
    <string name="menu_image_save">保存到手机中</string>
    <string name="menu_share">分享</string>
    <string name="menu_image_share_all">分享全部图片</string>
    <string name="menu_image_share_singal">分享图片</string>
    <string name="tips_discount_hint">分享图片</string>
    <string name="share_what_hint">分享点什么呢？</string>
    <string name="menu_delete">删除</string>
    <string name="txt_share_uploading">正在分享信息</string>
    <string name="txt_share_content_empty">分享的内容不能为空</string>
    <string name="reset">恢复</string>
    <string name="do_not_reset">不恢复</string>
    <string name="save_draft_success">保存草稿成功</string>
    <string name="need_to_save_draft">需要保存草稿吗？</string>
    <string name="do_not_save">不保存</string>
    <string name="had_draft_would_reset_tips">有上一次未分享成功的信息\n要恢复吗？</string>
    <string name="txt_sending">正在发送...</string>
    <string name="toast_save_iamge_success">保存图片成功</string>
    <string name="toast_save_iamge_failure">保存图片失败，请稍候再试</string>
    <string name="txt_main_body">正文</string>
    <string name="txt_root_user_manager">用户管理</string>

</resources>