<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical" >

    <!-- 回复标题 -->

    <TextView
        android:id="@+id/dialog_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/reply"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <!-- 输入框 -->

        <EditText
            android:id="@+id/dialog_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/edit_text"
            android:gravity="left|top"
            android:hint="@string/please_input_replay"
            android:inputType="textMultiLine"
            android:minLines="6"
            android:padding="3dp" >
        </EditText>
    </LinearLayout>
    <!-- 水平布局   （取消——发送 ）  按钮 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/divider_w"
        android:orientation="horizontal"
        android:showDividers="middle"
        android:paddingBottom="10dp" >

        <!-- 取消按钮 -->

        <TextView
            android:id="@+id/dialog_bt_concel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/concel"
            android:textColor="@drawable/text_selector" />

        <!-- 发送按钮 -->

        <TextView
            android:id="@+id/dialog_bt_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/send"
            android:textColor="@drawable/text_selector"/>
    </LinearLayout>

</LinearLayout>