<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tb_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"/>

    <LinearLayout
        android:layout_below="@+id/tb_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/edit_text"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/about"
                    android:textSize="30sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="20dp"
                    android:paddingTop="10dp"
                    android:text="@string/about_text" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="18"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/clear_cache"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:scaleType="fitEnd"
                    android:src="@drawable/clear_cache_selector" />

                <TextView
                    android:id="@+id/clear_cache_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/clear_cache"
                    android:gravity="center"
                    android:paddingTop="20dp"
                    android:text="@string/clear_cache"
                    android:textColor="@color/gray"
                    android:textSize="20sp" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/log_off"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/logout_selector"
            android:text="@string/logout"
            android:textColor="@color/white" />
    </LinearLayout>

</RelativeLayout>