<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="60dip"
        android:background="#FFFFFF" >

        <TextView
            android:id="@+id/myQuestion"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/myQuestion"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/myAnswer"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/myAnswer"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/myExperience"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/myExperience"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="5px"
        android:orientation="horizontal" 
        android:background="@color/gray">

        <ImageView
            android:id="@+id/cursor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:background="@color/gray"
            android:scaleType="matrix"
            android:src="@drawable/cursor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
             />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
             />
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/quespager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" >

    </android.support.v4.view.ViewPager>

</LinearLayout>