<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tb_forget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2.5" />

    <LinearLayout
        android:id="@+id/forget_layout1"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:layout_weight="7"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:src="@drawable/user_name" />

            <EditText
                android:id="@+id/forget_user_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="4"
                android:background="@drawable/editline"
                android:hint="@string/login_username"
                android:maxLength="24"
                android:paddingLeft="5dp"
                android:singleLine="true" />
        </LinearLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/grayline" />

        <Button
            android:id="@+id/forget_user_bt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/dp40"
            android:layout_marginRight="@dimen/dp40"
            android:background="@drawable/sele_login_btn"
            android:gravity="center"
            android:text="@string/forget_submit"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="4" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/forget_layout2"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_margin="20dp"
        android:layout_weight="7"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.75"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:src="@drawable/user_name" />

            <TextView
                android:id="@+id/forget_user1_tx"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginLeft="10dp"
                android:layout_weight="4"
                android:text="我是一个用户名"
                android:textSize="20dp" />
        </LinearLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/grayline" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.75"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:src="@drawable/q" />

            <TextView
                android:id="@+id/forget_ques_tx"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_gravity="bottom"
                android:layout_marginLeft="10dp"
                android:layout_weight="4"
                android:gravity="center_vertical"
                android:text="这是一个密保问题"
                android:textColor="#666666"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.75"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:src="@drawable/a" />

            <EditText
                android:id="@+id/forget_answer_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="4"
                android:background="@drawable/editline"
                android:hint="@string/forget_anser_et"
                android:maxLength="24"
                android:singleLine="true"
                android:textColor="#666666" />
        </LinearLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/grayline" />

        <Button
            android:id="@+id/forget_answer_bt"
            android:layout_width="150dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:background="@drawable/login_bt_selector"
            android:gravity="center"
            android:text="@string/forget_submit"
            android:textColor="#333333"
            android:textSize="15dp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="4" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/forget_layout3"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_margin="20dp"
        android:layout_weight="7"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.75"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:src="@drawable/user_name" />

            <TextView
                android:id="@+id/forget_user2_tx"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginLeft="10dp"
                android:layout_weight="4"
                android:text="我是一个用户名"
                android:textSize="20dp" />
        </LinearLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/grayline" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.75"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:src="@drawable/user_pwd" />

            <EditText
                android:id="@+id/forget_pw_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginLeft="10dp"
                android:layout_weight="4"
                android:background="@drawable/editline"
                android:hint="@string/login_password"
                android:maxLength="24"
                android:password="true"
                android:singleLine="true"
                android:textColor="#666666" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.75"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:src="@drawable/user_pwd" />

            <EditText
                android:id="@+id/forget_pwcheck_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginLeft="10dp"
                android:layout_weight="4"
                android:background="@drawable/editline"
                android:hint="@string/regist_check"
                android:maxLength="24"
                android:password="true"
                android:singleLine="true"
                android:textColor="#666666" />
        </LinearLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/grayline" />

        <Button
            android:id="@+id/forget_finish_bt"
            android:layout_width="150dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1.5"
            android:background="@drawable/login_bt_selector"
            android:gravity="center"
            android:text="@string/forget_finish"
            android:textColor="#333333"
            android:textSize="15dp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="2" />
    </LinearLayout>

</LinearLayout>